[gd_scene load_steps=5 format=3 uid="uid://dqju025dnhuna"]

[ext_resource type="Script" path="res://Battle/hud.gd" id="1_7bydp"]
[ext_resource type="Theme" uid="uid://bevcq3qnk3n8h" path="res://Battle/hud.tres" id="1_e8i8v"]
[ext_resource type="FontFile" uid="uid://cpwhwcvfj8ern" path="res://Text/Fonts/ut-hp-font.ttf" id="2_6w6gy"]
[ext_resource type="Texture2D" uid="uid://caaa653ktqno4" path="res://Battle/progbar.png" id="3_avg0y"]

[node name="HUD" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 46.0
offset_bottom = -456.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7bydp")

[node name="Name" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(98, 21)
layout_mode = 2
theme = ExtResource("1_e8i8v")
bbcode_enabled = true
text = "CHARA"

[node name="Lv" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(88, 0)
layout_mode = 2
theme = ExtResource("1_e8i8v")
bbcode_enabled = true
text = "LV 19"

[node name="HpText" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = -3

[node name="HP" type="RichTextLabel" parent="HpText"]
clip_contents = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme = ExtResource("1_e8i8v")
theme_override_fonts/normal_font = ExtResource("2_6w6gy")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "HP"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(111, 0)
layout_mode = 2
theme_override_constants/margin_bottom = 3

[node name="Border" type="Panel" parent="MarginContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = ExtResource("1_e8i8v")

[node name="KrBar" type="TextureProgressBar" parent="MarginContainer"]
layout_mode = 2
max_value = 20.0
value = 14.0
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("3_avg0y")
texture_progress = ExtResource("3_avg0y")
tint_under = Color(1, 0, 0, 1)
tint_progress = Color(1, 0, 1, 1)

[node name="HpBar" type="TextureProgressBar" parent="MarginContainer"]
layout_mode = 2
max_value = 20.0
value = 10.0
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_progress = ExtResource("3_avg0y")
tint_progress = Color(1, 0.890196, 0, 1)

[node name="KrText" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = -3

[node name="KR" type="RichTextLabel" parent="KrText"]
clip_contents = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme = ExtResource("1_e8i8v")
theme_override_fonts/normal_font = ExtResource("2_6w6gy")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "KR"
fit_content = true

[node name="Hp" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
theme = ExtResource("1_e8i8v")
bbcode_enabled = true
text = "92 / 92"
